[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yugetsu"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
